# musicevents

./: .dockerignore  .env.example  .gitignore  Containerfile  Containerfile.prod  INSTALLING.md  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  start_dev.sh  test_riviera_scraper.py
.github/workflows/: build-and-push.yml  pr-container-test.yml  tests.yml
.openhands/: setup.sh
.openhands/microagents/: repo.md
charts/musicevents/: Chart.yaml  README.md  values.yaml
charts/musicevents/templates/: NOTES.txt  _database-helpers.tpl  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  media-pvc.yaml  (+6 more)
events/: admin.py  context_processors.py  middleware.py  models.py  tasks.py  tests.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_artist_website_alter_event_external_id_and_more.py  0002_event_external_id.py  0003_alter_event_slug.py  0003_event_image_url.py  0004_artist_spotify_followers_artist_spotify_id_and_more.py  0004_event_thumbnail.py  0005_event_slug.py  0006_alter_event_slug.py
events/tests/: conftest.py  decorators.py  patches.py  test_cafeberlin_sync.py  test_i18n.py  test_image_server.py  test_models.py  test_sync.py  test_views.py  utils.py
events/utils/: __init__.py  cafeberlin_sync.py  image_utils.py  riviera_sync.py  sync_base.py  thumbnails.py  ticketmaster.py
music_events_project/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
music_events_project/settings/: __init__.py  base.py  dev.py  development.py  prod.py
static/css/: style.css
(+36 files in other folders)
